dashdemux: send missing FLUSH_STOP/EOS when no seeking period is found

https://bugzilla.gnome.org/show_bug.cgi?id=736800